<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_alarms">

    <fragment
        android:id="@+id/navigation_alarms"
        android:name="com.thinkty.myapplication.ui.alarm.AlarmsFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_alarms" />

    <fragment
        android:id="@+id/navigation_write"
        android:name="com.thinkty.myapplication.ui.write.WriteFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_write" />

    <fragment
        android:id="@+id/navigation_notes"
        android:name="com.thinkty.myapplication.ui.stories.StoriesFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notes" />
</navigation>