<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="70dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/new_note_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:padding="10dp"
            android:background="@drawable/notes_text_view_background"
            android:inputType="text"
            android:focusedByDefault="true"
            android:hint="@string/title"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/new_note_content"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:background="@drawable/notes_text_view_background"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="start"
            android:ems="10"
            android:hint="@string/hint_on_notes"
            android:inputType="textMultiLine"
            android:importantForAutofill="no" />

        <ImageButton
            android:id="@+id/create_new_note_button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/add"
            android:scaleType="fitCenter"
            android:contentDescription="@string/add_new_note" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>